@@ -48,6 +48,7 @@ com.mchange.v2.log.MLog=com.mchange.v2.log.jdk14logging.Jdk14MLog
 #com.mchange.v2.log.MLog=com.mchange.v2.log.FallbackMLog
 #com.mchange.v2.log.NameTransformer=com.mchange.v2.log.PackageNames
 #com.mchange.v2.log.FallbackMLog.DEFAULT_CUTOFF_LEVEL=ALL
+#com.mchange.v2.log.jdk14logging.suppressStackWalk=true
 
 #com.mchange.v2.c3p0.VMID=poop
 
